--- a/cublas_examples/Makefile
+++ b/cublas_examples/Makefile
@@ -10,8 +10,24 @@
       MKL_DIR = /soft/mkl/10.2.2.025
       CUDA_DIR =
       LIB_BITS =
-      DEFINES = 
       CUDA = NO
+      MKL = YES
+   endif
+   ifeq ($(HOSTNAME),flogin2.lcrc.anl.gov)
+      OPT = -O3 -xSSE2,SSE3,SSSE3,SSE4.1,SSE4.2 -no-prec-div -funroll-loops
+      MKL_DIR = /soft/mkl/10.2.2.025
+      CUDA_DIR =
+      LIB_BITS =
+      CUDA = NO
+      MKL = YES
+   endif
+   ifeq ($(HOSTNAME),flogin3.lcrc.anl.gov)
+      OPT = -O3 -xSSE2,SSE3,SSSE3,SSE4.1,SSE4.2 -no-prec-div -funroll-loops
+      MKL_DIR = /soft/mkl/10.2.2.025
+      CUDA_DIR =
+      LIB_BITS =
+      CUDA = NO
+      MKL = YES
    endif
 
    # Lincoln
@@ -20,16 +36,24 @@
       MKL_DIR = /usr/local/intel/mkl/10.2.2
       CUDA_DIR = /usr/local/cuda-2.2/cuda
       LIB_BITS =
-      DEFINES = -DCUDA
       CUDA = YES
+      MKL = YES
+   endif
+   ifeq ($(HOSTNAME),honest2.ncsa.uiuc.edu)
+      OPT = -O3 -xT -no-prec-div -funroll-loops
+      MKL_DIR = /usr/local/intel/mkl/10.2.2
+      CUDA_DIR = /usr/local/cuda-2.2/cuda
+      LIB_BITS =
+      CUDA = YES
+      MKL = YES
    endif
    ifeq ($(HOSTNAME),honest3.ncsa.uiuc.edu)
       OPT = -O3 -xT -no-prec-div -funroll-loops
       MKL_DIR = /usr/local/intel/mkl/10.2.2
       CUDA_DIR = /usr/local/cuda-2.2/cuda
       LIB_BITS =
-      DEFINES = -DCUDA
       CUDA = YES
+      MKL = YES
    endif
 
    # Megatron
@@ -38,20 +62,30 @@
       MKL_DIR = /opt/intel/Compiler/11.1/059/mkl
       CUDA_DIR = /opt/cuda
       LIB_BITS = 64
-      DEFINES = -DCUDA
       CUDA = YES
+      MKL = YES
    endif
 
-   PBLAS_LIB = -L${MKL_DIR}/lib/em64t -lguide -lmkl_intel_lp64 -lmkl_core -lmkl_intel_thread -lsvml
-   SBLAS_LIB = -L${MKL_DIR}/lib/em64t -lguide -lmkl_intel_lp64 -lmkl_core -lmkl_sequential -lsvml
-   CUBLAS_LIB = -L${CUDA_DIR}/lib${LIB_BITS} -lcublas
-   INC = -I${CUDA_DIR}/include -I${MKL_DIR}/include
+   DEFINES =
+   INC = 
 
    EXTRAS = -lm -lpthread -openmp
+   PLIB = $(EXTRAS)
+   SLIB = $(EXTRAS)
 
-   PLIB = $(PBLAS_LIB) $(EXTRAS)
-   SLIB = $(SBLAS_LIB) $(EXTRAS)
+   ifeq ($(MKL),YES)
+      DEFINES += -DMKL
+      PBLAS_LIB = -L${MKL_DIR}/lib/em64t -lguide -lmkl_intel_lp64 -lmkl_core -lmkl_intel_thread -lsvml
+      SBLAS_LIB = -L${MKL_DIR}/lib/em64t -lguide -lmkl_intel_lp64 -lmkl_core -lmkl_sequential -lsvml
+      INC += -I${MKL_DIR}/include
+      PLIB += $(PBLAS_LIB)
+      SLIB += $(SBLAS_LIB)
+   endif
+
    ifeq ($(CUDA),YES)
+      DEFINES += -DCUDA
+      CUBLAS_LIB = -L${CUDA_DIR}/lib${LIB_BITS} -lcublas
+      INC += -I${CUDA_DIR}/include
       PLIB += $(CUBLAS_LIB)
       SLIB += $(CUBLAS_LIB) 
    endif
