major changes to entire code to move to single binary, single run testing framework

--- a/cublas_examples/Makefile
+++ b/cublas_examples/Makefile
@@ -7,88 +7,110 @@
    # Fusion
    ifeq ($(HOSTNAME),flogin1.lcrc.anl.gov)
       OPT = -O3 -xSSE2,SSE3,SSSE3,SSE4.1,SSE4.2 -no-prec-div -funroll-loops
+      INTEL_DIR = 
       MKL_DIR = /soft/mkl/10.2.2.025
       CUDA_DIR =
       LIB_BITS =
       CUDA = NO
       MKL = YES
+      OPENMP = YES
    endif
    ifeq ($(HOSTNAME),flogin2.lcrc.anl.gov)
       OPT = -O3 -xSSE2,SSE3,SSSE3,SSE4.1,SSE4.2 -no-prec-div -funroll-loops
+      INTEL_DIR = 
       MKL_DIR = /soft/mkl/10.2.2.025
       CUDA_DIR =
       LIB_BITS =
       CUDA = NO
       MKL = YES
+      OPENMP = YES
    endif
    ifeq ($(HOSTNAME),flogin3.lcrc.anl.gov)
       OPT = -O3 -xSSE2,SSE3,SSSE3,SSE4.1,SSE4.2 -no-prec-div -funroll-loops
+      INTEL_DIR = 
       MKL_DIR = /soft/mkl/10.2.2.025
       CUDA_DIR =
       LIB_BITS =
       CUDA = NO
       MKL = YES
+      OPENMP = YES
    endif
 
    # Lincoln
    ifeq ($(HOSTNAME),honest1.ncsa.uiuc.edu)
       OPT = -O3 -xT -no-prec-div -funroll-loops
+      INTEL_DIR = 
       MKL_DIR = /usr/local/intel/mkl/10.2.2
       CUDA_DIR = /usr/local/cuda-2.2/cuda
       LIB_BITS =
       CUDA = YES
       MKL = YES
+      OPENMP = YES
    endif
    ifeq ($(HOSTNAME),honest2.ncsa.uiuc.edu)
       OPT = -O3 -xT -no-prec-div -funroll-loops
+      INTEL_DIR = 
       MKL_DIR = /usr/local/intel/mkl/10.2.2
       CUDA_DIR = /usr/local/cuda-2.2/cuda
       LIB_BITS =
       CUDA = YES
       MKL = YES
+      OPENMP = YES
    endif
    ifeq ($(HOSTNAME),honest3.ncsa.uiuc.edu)
       OPT = -O3 -xT -no-prec-div -funroll-loops
+      INTEL_DIR = 
       MKL_DIR = /usr/local/intel/mkl/10.2.2
       CUDA_DIR = /usr/local/cuda-2.2/cuda
       LIB_BITS =
       CUDA = YES
       MKL = YES
+      OPENMP = YES
    endif
 
    # Megatron
    ifeq ($(HOSTNAME),megatron)
       OPT = -O3 -xSSE2,SSE3,SSSE3,SSE4.1 -no-prec-div -funroll-loops
+      INTEL_DIR = /opt/intel/Compiler/11.1/059
       MKL_DIR = /opt/intel/Compiler/11.1/059/mkl
       CUDA_DIR = /opt/cuda
       LIB_BITS = 64
       CUDA = YES
       MKL = YES
+      OPENMP = YES
    endif
 
    DEFINES =
-   INC = 
+   INC =
+   PLIB =
+   SLIB =
 
-   EXTRAS = -lm -lpthread -openmp
-   PLIB = $(EXTRAS)
-   SLIB = $(EXTRAS)
+   ifeq ($(OPENMP),YES)
+      DEFINES += -DOPENMP
+      INC += -I$(INTEL_DIR)/include
+      PLIB += -openmp
+      SLIB += -openmp
+   endif
 
    ifeq ($(MKL),YES)
-      DEFINES += -DMKL
       PBLAS_LIB = -L${MKL_DIR}/lib/em64t -lguide -lmkl_intel_lp64 -lmkl_core -lmkl_intel_thread -lsvml
       SBLAS_LIB = -L${MKL_DIR}/lib/em64t -lguide -lmkl_intel_lp64 -lmkl_core -lmkl_sequential -lsvml
+      DEFINES += -DMKL
       INC += -I${MKL_DIR}/include
       PLIB += $(PBLAS_LIB)
       SLIB += $(SBLAS_LIB)
    endif
 
    ifeq ($(CUDA),YES)
-      DEFINES += -DCUDA
       CUBLAS_LIB = -L${CUDA_DIR}/lib${LIB_BITS} -lcublas
+      DEFINES += -DCUDA
       INC += -I${CUDA_DIR}/include
       PLIB += $(CUBLAS_LIB)
-      SLIB += $(CUBLAS_LIB) 
+      SLIB += $(CUBLAS_LIB)
    endif
+
+   PLIB += #-lm -lpthread
+   SLIB += #-lm -lpthread
 
    FC = ifort
    FOPT = $(OPT)
@@ -107,40 +129,42 @@
 #
 #############################################
 
-all: simpleCUBLAS.x CUBLAS_sgemm.x CUBLAS_dgemm.x
-#
-# LEGACY TARGET
-#
-simpleCUBLAS.x: simpleCUBLAS.o getticks.o 
-	$(LD) $(LDFLAGS) getticks.o simpleCUBLAS.o $(PLIB) -o simpleCUBLAS.x
+OBJECTS = blas_gemm_test.o cublas_gemm_test.o blas_utils.o cublas_utils.o getticks.o
+
+all: refresh
+
+bin: test_driver.x
 #
 # SERIAL/PARALLEL BLAS BINARIES
 #
-CUBLAS_sgemm.x: CUBLAS_sgemm.o getticks.o
-	$(LD) $(LDFLAGS) getticks.o CUBLAS_sgemm.o $(SLIB) -o CUBLAS_sgemm_S.x
-	$(LD) $(LDFLAGS) getticks.o CUBLAS_sgemm.o $(PLIB) -o CUBLAS_sgemm_P.x
-
-CUBLAS_dgemm.x: CUBLAS_dgemm.o getticks.o
-	$(LD) $(LDFLAGS) getticks.o CUBLAS_dgemm.o $(SLIB) -o CUBLAS_dgemm_S.x
-	$(LD) $(LDFLAGS) getticks.o CUBLAS_dgemm.o $(PLIB) -o CUBLAS_dgemm_P.x
+test_driver.x: test_driver.o $(OBJECTS)
+	$(LD) $(LDFLAGS) test_driver.o $(OBJECTS) $(SLIB) -o test_driver_S.x
+	$(LD) $(LDFLAGS) test_driver.o $(OBJECTS) $(PLIB) -o test_driver_P.x
 #
 # OBJECTS
 #
-simpleCUBLAS.o: simpleCUBLAS.c
-	$(CC) -c $(CFLAGS) $(INC) simpleCUBLAS.c
+test_driver.o: test_driver.c blas_gemm_test.h
+	$(CC) $(CFLAGS) $(INC) -c test_driver.c
 
-CUBLAS_sgemm.o: CUBLAS_sgemm.c
-	$(CC) -c $(CFLAGS) $(INC) CUBLAS_sgemm.c
+blas_gemm_test.o: blas_gemm_test.c blas_utils.h
+	$(CC) $(CFLAGS) $(INC) -c blas_gemm_test.c
 
-CUBLAS_dgemm.o: CUBLAS_dgemm.c
-	$(CC) -c $(CFLAGS) $(INC) CUBLAS_dgemm.c
+cublas_gemm_test.o: cublas_gemm_test.c cublas_utils.h blas_utils.h
+	$(CC) $(CFLAGS) $(INC) -c cublas_gemm_test.c
+
+blas_utils.o: blas_utils.c blas_utils.h
+	$(CC) $(CFLAGS) $(INC) -c blas_utils.c
+
+cublas_utils.o: cublas_utils.c cublas_utils.h
+	$(CC) $(CFLAGS) $(INC) -c cublas_utils.c
 
 getticks.o: getticks.c
 	gcc -c getticks.c
+
 #
 # UTILITY OPERATIONS
 #
-refresh: realclean all
+refresh: realclean bin
 
 clean:
 	rm -f *.o
