adding GA parallel stuff

--- a/cublas_examples/Makefile
+++ b/cublas_examples/Makefile
@@ -6,6 +6,7 @@
 
    # Gadzooks
    ifeq ($(HOSTNAME),login1.gadzooks.alcf.anl.gov)
+      TARGET=LINUX64
       OPT = -O3 -xHost -static-intel
       INTEL_DIR = /soft/apps/intel-cc-11.0.074
       MKL_DIR = /soft/apps/intel-cc-11.0.074/mkl
@@ -19,6 +20,7 @@
 
    # Fusion
    ifeq ($(HOSTNAME),flogin1.lcrc.anl.gov)
+      TARGET=LINUX64
       OPT = -O3 -xSSE2,SSE3,SSSE3,SSE4.1,SSE4.2
       INTEL_DIR = 
       MKL_DIR = /soft/mkl/10.2.2.025
@@ -30,6 +32,7 @@
       BIGTESTS = YES
    endif
    ifeq ($(HOSTNAME),flogin2.lcrc.anl.gov)
+      TARGET=LINUX64
       OPT = -O3 -xSSE2,SSE3,SSSE3,SSE4.1,SSE4.2
       INTEL_DIR = 
       MKL_DIR = /soft/mkl/10.2.2.025
@@ -42,6 +45,7 @@
    endif
    #ifeq ($(HOSTNAME),flogin3.lcrc.anl.gov)
    ifeq ($(HOSTNAME),flogin3)
+      TARGET=LINUX64
       OPT = -O3 -xSSE2,SSE3,SSSE3,SSE4.1,SSE4.2
       INTEL_DIR = 
       MKL_DIR = /soft/mkl/10.2.2.025
@@ -55,6 +59,7 @@
 
    # Lincoln
    ifeq ($(HOSTNAME),honest1.ncsa.uiuc.edu)
+      TARGET=LINUX64
       OPT = -O3 -xT
       INTEL_DIR = 
       MKL_DIR = /usr/local/intel/mkl/10.2.2
@@ -66,6 +71,7 @@
       BIGTESTS = YES
    endif
    ifeq ($(HOSTNAME),honest2.ncsa.uiuc.edu)
+      TARGET=LINUX64
       OPT = -O3 -xT
       INTEL_DIR = 
       MKL_DIR = /usr/local/intel/mkl/10.2.2
@@ -77,6 +83,7 @@
       BIGTESTS = YES
    endif
    ifeq ($(HOSTNAME),honest3.ncsa.uiuc.edu)
+      TARGET=LINUX64
       OPT = -O3 -xT
       INTEL_DIR = 
       MKL_DIR = /usr/local/intel/mkl/10.2.2
@@ -88,6 +95,7 @@
       BIGTESTS = YES
    endif
    ifeq ($(HOSTNAME),honest4.ncsa.uiuc.edu)
+      TARGET=LINUX64
       OPT = -O3 -xT
       INTEL_DIR = 
       MKL_DIR = /usr/local/intel/mkl/10.2.2
@@ -101,10 +109,16 @@
 
    # Megatron
    ifeq ($(HOSTNAME),megatron)
+      TARGET=LINUX64
       OPT = -O3 -xSSE2,SSE3,SSSE3,SSE4.1
       INTEL_DIR = /opt/intel/Compiler/11.1/059
       MKL_DIR = /opt/intel/Compiler/11.1/059/mkl
       CUDA_DIR = /opt/cuda
+      #MPI_PREFIX=/software/mpich/intel-build-mpich2-trunk/
+      #MPI_VENDOR=MPICH
+      MPI_PREFIX=/software/open-mpi/gnu-build
+      MPI_VENDOR=OMPI
+      GA_PREFIX=/software/ga/ga-4-2
       LIB_BITS = 64
       CUDA = YES
       MKL = YES
@@ -114,8 +128,7 @@
 
    DEFINES =
    INC =
-   PLIB =
-   SLIB =
+   LIB =
 
    ifeq ($(BIGTESTS),YES)
       DEFINES += -DBIGTESTS
@@ -124,29 +137,34 @@
    ifeq ($(OPENMP),YES)
       DEFINES += -DOPENMP
       INC += -I$(INTEL_DIR)/include
-      PLIB += -openmp
-      SLIB += -openmp
-   endif
-
-   ifeq ($(MKL),YES)
-      PBLAS_LIB = -L${MKL_DIR}/lib/em64t -lguide -lmkl_intel_lp64 -lmkl_core -lmkl_intel_thread -lsvml
-      SBLAS_LIB = -L${MKL_DIR}/lib/em64t -lguide -lmkl_intel_lp64 -lmkl_core -lmkl_sequential -lsvml
-      DEFINES += -DMKL
-      INC += -I${MKL_DIR}/include
-      PLIB += $(PBLAS_LIB)
-      SLIB += $(SBLAS_LIB)
+      LIB += -openmp
    endif
 
    ifeq ($(CUDA),YES)
       CUBLAS_LIB = -L${CUDA_DIR}/lib${LIB_BITS} -lcublas
       DEFINES += -DCUDA
       INC += -I${CUDA_DIR}/include
-      PLIB += $(CUBLAS_LIB)
-      SLIB += $(CUBLAS_LIB)
+      LIB += $(CUBLAS_LIB)
    endif
 
-   PLIB += #-lm -lpthread
-   SLIB += #-lm -lpthread
+   INC += -I$(GA_PREFIX)/include
+   LIB += -L$(GA_PREFIX)/lib/$(TARGET) -lglobal -lma -larmci -ltcgmsg-mpi
+
+   ifeq ($(MPI_VENDOR),OMPI)
+      LIB += -L$(MPI_PREFIX)/lib -lmpi -lopen-rte -lopen-pal -ldl -lutil
+   else
+      LIB += -L$(MPI_PREFIX)/lib -lmpich  -lopa -lrt
+   endif
+   INC += -I$(MPI_PREFIX)/include
+
+   ifeq ($(MKL),YES)
+      DEFINES += -DMKL
+      INC += -I${MKL_DIR}/include
+      PBLAS += -L${MKL_DIR}/lib/em64t -lguide -lmkl_intel_lp64 -lmkl_core -lmkl_intel_thread -lsvml
+      SBLAS += -L${MKL_DIR}/lib/em64t -lguide -lmkl_intel_lp64 -lmkl_core -lmkl_sequential -lsvml
+   endif
+
+   LIB += -lm -lpthread
 
    FC = ifort
    FOPT = $(OPT)
@@ -165,20 +183,26 @@
 #
 #############################################
 
-OBJECTS = blas_gemm_test.o cublas_gemm_test.o blas_utils.o cublas_utils.o getticks.o # cpuid.o
+OBJECTS = blas_gemm_test.o cublas_gemm_test.o ga_utils.o blas_utils.o cublas_utils.o getticks.o # cpuid.o
 
 all: bin
 
-bin: test_driver.x
+bin: test_driver.x dmp_gemm_driver.x
 #
 # SERIAL/PARALLEL BLAS BINARIES
 #
 test_driver.x: test_driver.o $(OBJECTS)
-	$(LD) $(LDFLAGS) test_driver.o $(OBJECTS) $(SLIB) -o test_driver_S.x
-	$(LD) $(LDFLAGS) test_driver.o $(OBJECTS) $(PLIB) -o test_driver_P.x
+	$(LD) $(LDFLAGS) test_driver.o $(OBJECTS) $(LIB) $(SBLAS) -o test_driver_S.x
+	$(LD) $(LDFLAGS) test_driver.o $(OBJECTS) $(LIB) $(PBLAS) -o test_driver_P.x
+
+dmp_gemm_driver.x: dmp_gemm_driver.o $(OBJECTS)
+	$(LD) $(LDFLAGS) dmp_gemm_driver.o $(OBJECTS) $(LIB) $(PBLAS) -o dmp_gemm_driver.x
 #
 # OBJECTS
 #
+dmp_gemm_driver.o: dmp_gemm_driver.c blas_gemm_test.h
+	$(CC) $(CFLAGS) $(INC) -c dmp_gemm_driver.c
+
 test_driver.o: test_driver.c blas_gemm_test.h
 	$(CC) $(CFLAGS) $(INC) -c test_driver.c
 
@@ -187,6 +211,9 @@ blas_gemm_test.o: blas_gemm_test.c blas_utils.h
 
 cublas_gemm_test.o: cublas_gemm_test.c cublas_utils.h blas_utils.h
 	$(CC) $(CFLAGS) $(INC) -c cublas_gemm_test.c
+
+ga_utils.o: ga_utils.c ga_utils.h
+	$(CC) $(CFLAGS) $(INC) -c ga_utils.c
 
 blas_utils.o: blas_utils.c blas_utils.h
 	$(CC) $(CFLAGS) $(INC) -c blas_utils.c
