add personality stuff and other build fixes

--- a/comm_benchmarks/Makefile
+++ b/comm_benchmarks/Makefile
@@ -131,7 +131,8 @@
    endif
    ifeq ($(TARGET),BGP)
       GCC = $(CC)
-      DEFINES += -DUSE_DCMF_TIMEBASE
+      DEFINES += -DHAVE_DCMF_TIMEBASE
+      DEFINES += -DHAVE_BGP_PERSONALITY
    endif
 
    LIB += -lm -lpthread
